# nrai_perception

./: .gitignore  LICENSE  README.md  package.xml  setup.cfg  setup.py
nrai_perception/: __init__.py  __main__.py  code.py  data.py  ros.py  zed_yolo_track.py
resource/: custom_object_detection.yaml
test/: test_copyright.py  test_flake8.py  test_main.py  test_pep257.py
