<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nrai_perception</name>
  <version>0.0.1</version>
  <description>Newcastle Racing AI module for perception</description>
  <maintainer email="email@example.com">Newcastle Racing AI</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>python3-ultralytics-pip</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
